--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" rel="stylesheet">
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/journal/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body class="d-flex flex-column vh-100">
@@ -56,11 +56,7 @@
             <a href="#" class="btn btn-dark me-2"><i class="bi bi-linkedin"></i></a>
             <a href="#" class="btn btn-dark me-2"><i class="bi bi-twitter"></i></a>
             <a href="#" class="btn btn-dark me-2"><i class="bi bi-github"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="btn btn-dark me-2"><i class="bi bi-tiktok"></i></a>
             <a href="#" class="btn btn-dark me-2"><i class="bi bi-instagram"></i></a>
-            <!-- New button with the rebranded X logo -->
-            <a href="#" class="btn btn-dark me-2"><strong>𝕏</strong></a>
           </div>
         </div>
       </div>
